# gateway

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  config.json  docker-compose.yml
src/: html.rs  json.rs  main.rs  managers.rs  messenger.rs  opcodes.rs  security.rs  utils.rs  webhook.rs  ws.rs
src/clients/: mod.rs
src/clients/routes/: ws.rs
src/emitters/: mod.rs
src/player/: mod.rs  player.rs
src/player/routes/: mod.rs  pps.rs  sync.rs  tracks.rs
src/redis_client/: mod.rs
src/rooms/: mod.rs  room.rs
src/rooms/routes/: api.rs  mod.rs
src/utils/: mod.rs  responses.rs
src/utils/channels/: mod.rs
templates/: room.html  webtorrent_test.html
tests/: client.py
